--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <body>
         <div class="container">
             <div class="form">
-                <h3>Confira o Clima de uma Cidade</h3>
+                <h4>Confira o Clima de uma Cidade/País</h4>
                 <div class="form-input-container">
                     <input type="text" placeholder="Digite o nome da cidade"  id="city-input">
                     <button id="search">
